--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.2.0-beta1",
     "daisyui": "^2.17.0",
+    "firebase": "^9.9.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.33.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
